# crypto_log

./: .gitignore  Cargo.toml  LICENSE  Pipfile  README.md  crypto.ini.example  setup.py
src/: amount.py  capital_gain.py  config.py  config.rs  const.py  cost_basis.py  crypto  crypto.rs  crypto_api.py  error.rs  generate.py  generate_algo.py  generator.rs  history.py  main.rs  report.py  report.rs  transaction.py  transaction.rs  undo.py  util.py  util.rs
src/generator/: crypto_com.rs  csv_helper.rs  newton.rs  shakepay.rs
src/report/: amount.rs  capital_gain.rs  cost_basis.rs
src/serializer/: date_time_serializer.py  decimal_serializer.py
src/transaction/: transaction_test.rs  transaction_type.rs
src/util/: color.rs  config.rs  error.rs  helper.rs
tests/: test_transactions.py  test_undo.py
